# marmaes

./: .gitignore  CMakeLists.txt  README.md  license.txt  marmeas-desktop.sh  marmeas.conf  marmeas.doxyfile
doc/: CMakeLists.txt  glossary.html  gpl_v3.txt  icomm.qhc  index.html  marmeas.qhcp  marmeas.qhp  marmeas.vpp  userguide.html
include/: arbitrary_math.h  object_base.h  object_interface.h
include/marmeas_core/: basic_type_read_write.h  geometric_object.h  geometric_object_container.h  measurement_on_object.h  object_base_read_write.h  xml_reader_writer.h
include/marmeas_gui/: graphics_item.h  graphics_point_item.h
plugins/: CMakeLists.txt
plugins/circle/: CMakeLists.txt
plugins/circle/src/: 2point_circle.cpp  2point_circle.h  3point_circle.cpp  3point_circle.h  CMakeLists.txt  circle.cpp  circle.h  geometric_measurement_circle.cpp  histogram_measurement_circle.cpp  measurement_circle.cpp  measurement_circle.h  plugin_circle.cpp  plugin_circle.h  resources_circle.qrc  xml_circle.cpp  xml_circle.h
plugins/circle/tests/: CMakeLists.txt  circle_object_tests.cpp  circle_object_tests.h  xml_circle_object_tests.cpp  xml_circle_object_tests.h
plugins/line/src/: CMakeLists.txt  geometric_measurement_line.cpp  line.cpp  line.h  line_resources.qrc  measurement_line.cpp  measurement_line.h  plugin_line.cpp  plugin_line.h  profile_measurement_line.cpp  xml_line.cpp  xml_line.h
plugins/line/tests/: CMakeLists.txt  line_object_tests.cpp  line_object_tests.h  qtestrunner.cpp  testrunner.cpp  xml_line_object_tests.cpp  xml_line_object_tests.h
src/: CMakeLists.txt  ToDo.txt  arbitrary_math.cpp  config_object_and_measure.ui  help.cpp  help.h  help.ui  help_browser.cpp  help_browser.h  image_context.ui  image_context_templates.ui  injected_defines.h.in  main.cpp  main.ui  main_interaction.cpp  main_interaction.h  object_data_edit.ui  object_data_view.ui  object_plugin.cpp  object_plugin.h  personal_settings.ui  resources.qrc  status_and_history.cpp  status_and_history.h
src/image_context/: image_context_dialog.cpp  image_context_dialog.h  image_context_templates_dialog.cpp  image_context_templates_dialog.h  image_context_view.cpp  image_context_view.h
src/marmeas_core/: CMakeLists.txt
src/marmeas_core/core/: basic_type_read_write.cpp  xml_reader_writer.cpp
src/marmeas_core/image_context/: image_context.cpp  image_context.h  image_context_read_write.cpp  image_context_read_write.h  image_context_template.cpp  image_context_template.h
src/marmeas_core/measurement/: composite_measurement.cpp  geometric_measurement.cpp  histogram_statistics.cpp  histogram_statistics.h  intensity_measurement.cpp  measurement_on_object.cpp  measurement_read_write.cpp  measurement_read_write.h  point_clowd.cpp  point_clowd.h  quartile.cpp  quartile.h
src/marmeas_core/object/: geometric_object_container.cpp  object_base.cpp  object_base_read_write.cpp
src/marmeas_gui/: CMakeLists.txt  graphics_item.cpp  graphics_point_item.cpp  graphics_scene.cpp  graphics_scene.h  graphics_view.cpp  graphics_view.h
src/object/: object_data_dialog.cpp  object_data_dialog.h  object_data_view.cpp  object_data_view.h  object_template.cpp  object_template.h
tests/: CMakeLists.txt  cppunit-to-junit.xslt  status_and_history_tests.cpp  status_and_history_tests.h  xml_full_tests.cpp  xml_full_tests.h
tests/core/: xml_basic_tests.cpp  xml_basic_tests.h
tests/image_context/: image_context_tests.cpp  image_context_tests.h  xml_image_context_test.cpp  xml_image_context_test.h
tests/measurement/: composite_measurement_tests.cpp  composite_measurement_tests.h  geometric_measurement_tests.cpp  geometric_measurement_tests.h  histogram_statistics_tests.cpp  histogram_statistics_tests.h  intensity_measurement_tests.cpp  intensity_measurement_tests.h  measurement_tests.cpp  measurement_tests.h  xml_measurement_tests.cpp  xml_measurement_tests.h
tests/object/: geometric_object_container_tests.cpp  geometric_object_container_tests.h  object_base_tests.cpp  object_base_tests.h
